--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prebuild": "del-cli dist -f",
+    "build": "webpack src/main.js dist/bundle.js",
+    "execute": "node dist/bundle.js",
+    "start": "npm run build -s && npm run execute -s",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.75.0"
+    "del-cli": "~0.2.1",
+    "webpack": "~2.2.1"
   },
   "dependencies": {
     "lodash": "^4.17.21"
